syntax = "proto3";

package helloworld.v1;

option go_package = "xiuyiPro/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "helloworld.v1";
option objc_class_prefix = "APIHelloworldV1";

enum ErrorReason {
  GREETER_UNSPECIFIED = 0;
  USER_NOT_FOUND = 1;
  START_APP_FAILED = 12191;
  WEBSOCKET_EXIST = 12192; // ws已经存在
}
